--- a/index1.html
+++ b/index1.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="estilo1.css">
-    <title>Práctica 1 Uso de DIV</title>
+    <title>Lux Aeterna</title>
 </head>
 <body>
     <div id="general">
@@ -15,8 +15,8 @@
     </div>
    
     <div id="contenido">
-        <div id="informacion"> Información Principal </div>
-        <div id="menu"> Acceso a Redes Sociales </div>
+        <div id="home"> Home </div>
+        <div id="newsletter"> Newsletter </div>
     </div>
    
 </div>
