--- a/index1.html
+++ b/index1.html
@@ -11,7 +11,7 @@
     <div id="general">
         
         <div id="encabezado">
-            
+            <div id="logo"> <img src="Logo.png" alt="logo"> </div>    
             <div id="titulo"> ¡BIENVENIDOS! </div>
     </div>
    
